--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,61 @@
+# Python
 __pycache__/
 *.pyc
-.env
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+
+# Virtual Environments
 venv/
+.venv/
+ENV/
+env/
+
+# Environment Variables & Secrets
+.env
+.env.local
+.env.*.local
+*.secret
+credentials.json
+secrets.yaml
+
+# IDE & Editors
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Airflow
+logs/
+airflow.db
+airflow.cfg
+unittests.cfg
+airflow-webserver.pid
+standalone_admin_password.txt
+
+# Spark
+.ivy2/
+metastore_db/
+derby.log
+spark-warehouse/
+spark-jars/
+
+# DBT
+dbt_project/target/
+dbt_project/dbt_packages/
+dbt_project/logs/
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
